z3950 validacion en el cliente

--- a/intranet/htdocs/intranet-tmpl/admin/z3950/z3950servers.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/z3950/z3950servers.tmpl
@@ -1,4 +1,13 @@
 [% INCLUDE "intranet-top.inc" %]
+[% INCLUDE "FormValidateHelper.inc" %]
+
+<script type="text/javascript" language="javascript">
+$(document).ready(function() {
+    actualizarTabla();
+    validateAddForm(guardarNewServer);
+    validateEditForm(guardarServer);
+});
+</script>
 
 <script type="text/javascript" language="javascript" src="/intranet-tmpl/includes/admin/servidoresz3950.js"></script>
 
