mensaje automatico generado para el sql.rev82

--- a/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/detalleVisualizacionIntra.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/detalleVisualizacionIntra.tmpl
@@ -34,7 +34,7 @@
 		    $("#sortable").disableSelection();
 		    
 		    function updateSortable(responseText){
-		        zebra('tabla_datos_visualizacion_intra')
+		        zebra('tabla_datos_visualizacion_intra');
 		    }
 	    });
 </script>
