--- a/intranet/htdocs/intranet-tmpl/reports/usuariosResult-export.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/usuariosResult-export.tmpl
@@ -3,8 +3,13 @@
 <fieldset class="resultados_busqueda">
 <!--     <legend class="titulo_legend trigger click">[% "Resultados de la b&uacute;squeda" | i18n %]:</legend> -->
         <div class="datos_tabla_div" id="datos_tabla_div">
-            <div class="resultados_consulta">[% "Total de registros" | i18n %]: [% cantidad %]  </div>
-            <div class="contenedor_paginador">[% paginador %]</div>
+            <div class="resultados_consulta">[% "Total de registros" | i18n %]: [% cantidad %] </div>
+            <div class="filtros_reporte">
+                [% "A&ntilde;o" | i18n %]: [% param_anio %]<br />
+                [% "Categor&iacute;a" | i18n %]: [% param_categoria %]<br />
+                [% "Total de registros" | i18n %]: [% cantidad %]<br />
+                [% "Total de registros" | i18n %]: [% cantidad %]<br />
+            </div>
                 <table id="tablaResult" class="datos_tabla" border=0 cellspacing=0 cellpadding=0 width="100%">
                 <thead>
                     <tr class="titulo_tabla_resultado">
