novedades opac fixes

--- a/opac/htdocs/opac-tmpl/opac-novedades_result.tmpl
+++ b/opac/htdocs/opac-tmpl/opac-novedades_result.tmpl
@@ -1,21 +1,20 @@
-[% IF !cantidad %]
-      <!--<span class="highlighted">[% 'Sin novedades' | i18n %].</span>-->
-      <h1>[% 'Sin novedades' | i18n %]</h1>
-[% END %]
-[% FOREACH novedad IN novedades %]
-  <div class="novedad_opac" id="novedad_opac_[% novedad.getId %]">
-      <span class="del"><a href="#" onclick="eliminarPublicacion([% novedad.getId %])" class="delete" title="No mostrar esta novedad de nuevo" id="del_novedad_[% novedad.getId %]">X</a></span>
-      <h1>
-        <a href='[% url_prefix %]/ver_novedad.pl?id=[% novedad.getId %]&amp;token=[% token %]'>[% novedad.getTitulo %]</a>
-      </h1>
-      <h3>
-        [% novedad.getFechaLegible %]
-      </h3>
-      <p>
-          [% novedad.getResumen %]
-          <a href='[% url_prefix %]/ver_novedad.pl?id=[% novedad.getId %]&amp;token=[% token %]'>
-            [% 'Leer m&aacute;s' | i18n %] &raquo;
-          </a>
-      </p>
-  </div>
+[% IF cantidad %]
+    <h1 class="pagetitle">[% 'Novedades de la biblioteca' | i18n %]</h1>
+    [% FOREACH novedad IN novedades %]
+      <div class="novedad_opac" id="novedad_opac_[% novedad.getId %]">
+          <span class="del"><a href="#" onclick="eliminarPublicacion([% novedad.getId %])" class="delete" title="No mostrar esta novedad de nuevo" id="del_novedad_[% novedad.getId %]">X</a></span>
+          <h1>
+            <a href='[% url_prefix %]/ver_novedad.pl?id=[% novedad.getId %]&amp;token=[% token %]'>[% novedad.getTitulo %]</a>
+          </h1>
+          <h3>
+            [% novedad.getFechaLegible %]
+          </h3>
+          <p>
+              [% novedad.getResumen %]
+              <a href='[% url_prefix %]/ver_novedad.pl?id=[% novedad.getId %]&amp;token=[% token %]'>
+                [% 'Leer m&aacute;s' | i18n %] &raquo;
+              </a>
+          </p>
+      </div>
+    [% END %]
 [% END %]
