--- a/intranet/htdocs/intranet-tmpl/auth.tmpl
+++ b/intranet/htdocs/intranet-tmpl/auth.tmpl
@@ -14,6 +14,12 @@
 <script type="text/javascript" src="/includes/sha1-min.js"></script>
 
 <script type="text/javascript">
+	 var RecaptchaOptions = {
+	 };
+</script>
+
+
+<script type="text/javascript">
     function enviar(){
         [% IF authMERAN == 1 %]
             var nroRandom   = [% nroRandom %];
