--- a/intranet/htdocs/intranet-tmpl/changepassword.tmpl
+++ b/intranet/htdocs/intranet-tmpl/changepassword.tmpl
@@ -88,10 +88,10 @@ $(document).ready(function() {
             <input type="password" name="newpassword2" id="newpassword2">
         </li>
         [% PERL %]
-                            print C4::AR::Filtros::to_Button(   text    => "[% 'Cambiar' | i18n %]",
+                            print C4::AR::Filtros::to_Button(   text    => "[% 'Confirmar contrase&ntilde;a' | i18n %]",
                                                                 boton   => "boton_agregar",
                                                                 onClick => "guardarCambiarPassword();",
-                                                                title   => "[% 'Cambiar' | i18n %]",
+                                                                title   => "[% 'Confirmar contrase&ntilde;a' | i18n %]",
                                     ) ;
         [% END %]
 
