--- a/opac/htdocs/opac-tmpl/temas/default/includes/opac.css
+++ b/opac/htdocs/opac-tmpl/temas/default/includes/opac.css
@@ -666,6 +666,20 @@ html {filter: expression(document.execCommand("BackgroundImageCache", false, tru
 
 }
 
+.icon_marc {
+    background: transparent url(../imagenes/iconos/marc.png) no-repeat;
+    height: 25px;
+    width: 25px;
+    cursor: pointer;
+}
+
+.botonCentradoTabla {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0;
+    margin-bottom: 0;
+    clear: both;
+}
 
 
 .contenedor_paginador{
