--- a/intranet/htdocs/intranet-tmpl/checkBrowser.tmpl
+++ b/intranet/htdocs/intranet-tmpl/checkBrowser.tmpl
@@ -12,11 +12,11 @@
         <h3>Navegador no Soportado</h3>
         <p>Usted esta navegando <strong>MERAN</strong> con una version de navegador vieja.</p>
         <p>Le recomendamos instale los siguientes navegadores:</p>
-        <img alt="Firefox" src="[% temas %]/[% user_theme_intra %]/includes/images/firefox_logo.png" />
-        <img alt="Opera" src="[% temas %]/[% user_theme_intra %]/includes/images/opera_logo.png" />
-        <img alt="Google Chrome" src="[% temas %]/[% user_theme_intra %]/includes/images/google_chrome_logo.png" />
-        <img alt="Safaro" src="[% temas %]/[% user_theme_intra %]/includes/images/safari_logo.png" />
-        <img alt="Internet Explorer" src="[% temas %]/[% user_theme_intra %]/includes/images/internet_explorer_logo.png" />
+        <a href="http://www.mozilla.com/es-AR/firefox/" target="_blank"><img alt="Firefox" src="[% temas %]/[% user_theme_intra %]/includes/images/firefox_logo.png" /></a>
+        <a href="http://www.opera.com/" target="_blank"><img alt="Opera" src="[% temas %]/[% user_theme_intra %]/includes/images/opera_logo.png" /></a>
+        <a href="http://www.google.com/Chrome" target="_blank"><img alt="Google Chrome" src="[% temas %]/[% user_theme_intra %]/includes/images/google_chrome_logo.png" /></a>
+        <a href="http://www.apple.com/es/safari/download/" target="_blank"><img alt="Safari" src="[% temas %]/[% user_theme_intra %]/includes/images/safari_logo.png" /></a>
+        <a href="http://windows.microsoft.com/es-XL/internet-explorer/downloads/ie" target="_blank"><img alt="Internet Explorer" src="[% temas %]/[% user_theme_intra %]/includes/images/internet_explorer_logo.png" /></a>
         <input type="hidden" name="acepto_browser" value="1" />
         <p><input type="submit" value="Aceptar" /></p>
     </form>
